deny posting empty tweets and clear text field after posting

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="tweet-input-area">
       <img src="img/profilepicture.jpeg" class="profile-pic">
       <textarea
-        class="tweet-input-text"></textarea>
+        class="tweet-input-text" placeholder="What's happening?"></textarea>
     </div>
     <button class="tweet-btn">Tweet</button>
     <div class="feed" id="feed"></div>
